--- a/index.html
+++ b/index.html
@@ -9,6 +9,32 @@
     <title>Lic. Tolosa Rodrigo -Porfolio-</title>
 </head>
 <body>
-    <h1>Hola MUndo</h1>
+    <div class="container">
+    <header class="d-flex justify-content-end">      
+         <ul class="nav nav-pills">
+                <li class="nav-item"><a href="#" class="nav-link">Inicio</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Skills</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Experiencia</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Educacion</a></li>
+         </ul>        
+    </header>    
+        <section class="row align-items-center"> <h1>Tolosa Rodrigo</h1></section>
+        <section class="row align-items-center"> <h2>Skills</h2></section>
+        <section class="row align-items-center"> <h2>Experiencia</h2></section>
+        <section class="row align-items-center"> <h2>Educacion</h2></section>    
+    <footer class="row justify-content-evenly align-items-center">
+        <div class="col-12 col-md-6 ">
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a href="#" class="nav-link">Linkedin</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Instagram</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Git</a></li>                
+         </ul> 
+        </div>
+        <div class="col-12 col-md-6">
+            <h6> &copy; 2023 Todos los derechos reservados. Lic. Tolosa Rodrigo </h6>
+        </div>
+        
+    </footer>
+   </div>   
 </body>
 </html>
