--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">    
+    <link rel="stylesheet" href="css/main.css">
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/9817cf6728.js" crossorigin="anonymous"></script>
     <title>Lic. Tolosa Rodrigo -Porfolio-</title>
 </head>
 <body>
@@ -18,16 +20,29 @@
                 <li class="nav-item"><a href="#" class="nav-link">Educacion</a></li>
          </ul>        
     </header>    
-        <section class="row align-items-center"> <h1>Tolosa Rodrigo</h1></section>
-        <section class="row align-items-center"> <h2>Skills</h2></section>
+        <section class="row justify-content-center">
+            <div class="col-12">
+                <h3>Hola, soy</h3>
+                <h1>Tolosa Rodrigo</h1>
+                <p> adsdas</p>           
+            </div> 
+            <div class="col-12 ">
+                <ul class="nav nav-pills">
+                    <li class="nav-item"><a href="https://www.linkedin.com/in/rodrigo-n-tolosa/" target="_blank" class="fab fa-linkedin-in fa-2x" style="color: #0082ca;"></a></li>
+                    <li class="nav-item"><a href="https://github.com/tolosarodrigo00" target="_blank" class="fab fa-github fa-2x" style="color: #333333;"></a></li>                                          
+             </ul> 
+            </div>
+            
+        </section>
+        <section class="row align-items-center"> <h2>Skills</h2>
+        </section>
         <section class="row align-items-center"> <h2>Experiencia</h2></section>
         <section class="row align-items-center"> <h2>Educacion</h2></section>    
     <footer class="row justify-content-evenly align-items-center">
         <div class="col-12 col-md-6 ">
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link">Linkedin</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Instagram</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Git</a></li>                
+                <li class="nav-item"><a href="https://www.linkedin.com/in/rodrigo-n-tolosa/" target="_blank" class="fab fa-linkedin-in fa-2x" style="color: #0082ca;"></a></li>
+                <li class="nav-item"><a href="https://github.com/tolosarodrigo00" target="_blank" class="fab fa-github fa-2x" style="color: #333333;"></a></li>                  
          </ul> 
         </div>
         <div class="col-12 col-md-6">
