--- a/index.html
+++ b/index.html
@@ -12,37 +12,54 @@
 </head>
 <body>
     <div class="container">
-    <header class="d-flex justify-content-end">      
+    <header class="d-flex justify-content-end pt-4 pb-5">      
          <ul class="nav nav-pills">
                 <li class="nav-item"><a href="#" class="nav-link">Inicio</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Skills</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Experiencia</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Sobre mi</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Habilidades</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Educacion</a></li>
          </ul>        
     </header>    
-        <section class="row justify-content-center">
-            <div class="col-12">
-                <h3>Hola, soy</h3>
-                <h1>Tolosa Rodrigo</h1>
-                <p> adsdas</p>           
+        <section id= 'HOME' class="row justify-content-center pt-5 mb-5">
+            <div class="col-6 align-content-center" >
+                <h4 >Hola 👋! Soy </h4>  
+                <h1><span >Tolosa Rodrigo</span></h1>        
+                <h4>Desarrollador de Soffware</h4>
+                <ul class="nav nav-pills gap-3">
+                    <li class="nav-item "><a href="https://www.linkedin.com/in/rodrigo-n-tolosa/" target="_blank" class="fab fa-linkedin-in fa-2x text-decoration-none" style="color: #0082ca;"></a></li>
+                    <li class="nav-item "><a href="https://github.com/tolosarodrigo00" target="_blank" class="fab fa-github fa-2x text-decoration-none" style="color: #333333;"></a></li>                       
+               </ul>
             </div> 
-            <div class="col-12 ">
-                <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="https://www.linkedin.com/in/rodrigo-n-tolosa/" target="_blank" class="fab fa-linkedin-in fa-2x" style="color: #0082ca;"></a></li>
-                    <li class="nav-item"><a href="https://github.com/tolosarodrigo00" target="_blank" class="fab fa-github fa-2x" style="color: #333333;"></a></li>                                          
-             </ul> 
+            <div class="col-6">
+                <img src="./img/foto_selfie.jpeg" alt="" class="img-fluid">
             </div>
-            
+         </section>
+        <section id="ACERCA" class="row align-items-center">
+             <div class="col-6">
+             <h2>Sobre mi</h2>
+             <p>Me considero una persona responsable, creativa, con iniciativa y puntualidad.</p>
+             <p>Asumo con agrado los retos y metas que su organización me pudiera plantear.</p>
+             <p>Interés por la actualización profesional, facilidad para trabajar en equipo, en condiciones de alta presión, así como para resolver problemas eficientemente y lograr las metas trazadas por la empresa y mi grupo de trabajo.</p>                          
+            </div>
         </section>
-        <section class="row align-items-center"> <h2>Skills</h2>
+        <section id="HABILIDADES" class="row align-items-center pt-5 pb-5"> 
+             <div class="col-6">
+                <h2>Habilidades</h2>
+             </div>
+             <div class="col-6">
+                <h2>Herramientas</h2>
+             </div>
         </section>
-        <section class="row align-items-center"> <h2>Experiencia</h2></section>
-        <section class="row align-items-center"> <h2>Educacion</h2></section>    
-    <footer class="row justify-content-evenly align-items-center">
-        <div class="col-12 col-md-6 ">
-            <ul class="nav nav-pills">
-                <li class="nav-item"><a href="https://www.linkedin.com/in/rodrigo-n-tolosa/" target="_blank" class="fab fa-linkedin-in fa-2x" style="color: #0082ca;"></a></li>
-                <li class="nav-item"><a href="https://github.com/tolosarodrigo00" target="_blank" class="fab fa-github fa-2x" style="color: #333333;"></a></li>                  
+        <section id="EDUCACION" class="row align-items-center"> 
+            <div class="col-12">
+                <h2>Educacion</h2>
+            </div>
+        </section>    
+    <footer class="row justify-content-evenly align-items-center pb-3 pt-3">
+        <div class="col-12 col-md-6">
+            <ul class="nav nav-pills gap-3">
+                <li class="nav-item" ><a href="https://www.linkedin.com/in/rodrigo-n-tolosa/" target="_blank" class="fab fa-linkedin-in fa-2x text-decoration-none" style="color: #0082ca;"></a></li>
+                <li class="nav-item"><a href="https://github.com/tolosarodrigo00" target="_blank" class="fab fa-github fa-2x text-decoration-none" style="color: #333333;"></a></li>                  
          </ul> 
         </div>
         <div class="col-12 col-md-6">
