--- a/index.html
+++ b/index.html
@@ -18,21 +18,19 @@
                 <li class="nav-item"><a href="#" class="nav-link">Sobre mi</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Habilidades</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Educacion</a></li>
-         </ul>        
+         </ul>             
     </header>    
         <section id= 'HOME' class="row justify-content-center pt-5 mb-5">
-            <div class="col-6 align-content-center" >
+            <div class="col-8 align-content-center" >
                 <h4 >Hola 👋! Soy </h4>  
                 <h1><span >Tolosa Rodrigo</span></h1>        
-                <h4>Desarrollador de Soffware</h4>
+                <h4>Desarrollador de Software</h4>
                 <ul class="nav nav-pills gap-3">
                     <li class="nav-item "><a href="https://www.linkedin.com/in/rodrigo-n-tolosa/" target="_blank" class="fab fa-linkedin-in fa-2x text-decoration-none" style="color: #0082ca;"></a></li>
                     <li class="nav-item "><a href="https://github.com/tolosarodrigo00" target="_blank" class="fab fa-github fa-2x text-decoration-none" style="color: #333333;"></a></li>                       
+                    <li class="nav-item "><a href="" target="_blank" class="fa-regular fa-file-pdf fa-2x text-decoration-none" style="color: #333333;"></a></li>                       
                </ul>
-            </div> 
-            <div class="col-6">
-                <img src="./img/foto_selfie.jpeg" alt="" class="img-fluid">
-            </div>
+            </div>             
          </section>
         <section id="ACERCA" class="row align-items-center">
              <div class="col-6">
@@ -43,16 +41,48 @@
             </div>
         </section>
         <section id="HABILIDADES" class="row align-items-center pt-5 pb-5"> 
-             <div class="col-6">
+             <div class="col text-center ">
                 <h2>Habilidades</h2>
-             </div>
-             <div class="col-6">
-                <h2>Herramientas</h2>
-             </div>
+                <div class="row justify-content-evenly pt-5 pb-5 gap-3">
+                    <div class="col-12 col-md-4 col-lg-2">
+                        <a class="fa-brands fa-html5 fa-5x text-decoration-none" style="color: #333333;"></a>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-2">
+                        <a  class="fa-brands fa-css3-alt fa-5x text-decoration-none" style="color: #333333;"></a>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-2">
+                        <a  class="fa-brands fa-bootstrap  fa-5x text-decoration-none" style="color: #333333;"></a>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-2">
+                        <a  class="fa-brands fa-aws  fa-5x text-decoration-none" style="color: #333333;"></a>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-2">
+                        <a  class="fa-brands fa-java  fa-5x text-decoration-none" style="color: #333333;"></a>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-2">
+                        <a  class="fa-brands fa-python fa-5x text-decoration-none" style="color: #333333;"></a>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-2">
+                        <a  class="fab fa-github fa-2x fa-5x text-decoration-none" style="color: #333333;"></a>
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-2">
+                        <a  class="fa-brands fa-git-alt fa-5x text-decoration-none" style="color: #333333;"></a>
+                    </div>   
+                    
+                </div>
+             </div>             
         </section>
-        <section id="EDUCACION" class="row align-items-center"> 
-            <div class="col-12">
+        <section id="EDUCACION" class="row justify-content-center "> 
+            <div class="col-12 align-items-center">                
                 <h2>Educacion</h2>
+                <ul  class="nav nav-pills  gap-3" >
+                    <li class="nav-item" > HTML</li>
+                    <li class="nav-item" >CSS </li>
+                    <li class="nav-item" > BOSSTRAP</li>
+                    <li class="nav-item" > ASDASD</li>
+
+
+                </ul>
             </div>
         </section>    
     <footer class="row justify-content-evenly align-items-center pb-3 pt-3">
