Se agrega facicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/9817cf6728.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="img/code-solid.ico">
     <title>Lic. Tolosa Rodrigo -Porfolio-</title>
 </head>
 <body>
