Se agrega padding

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="container">
     <header class="d-flex justify-content-end pt-4 pb-5">      
          <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link">Inicio</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Sobre mi</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Habilidades</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Educacion</a></li>
+                <li class="nav-item"><a href="#HOME" class="nav-link ">Inicio</a></li>
+                <li class="nav-item"><a href="#ACERCA" class="nav-link">Sobre mi</a></li>
+                <li class="nav-item"><a href="#HABILIDADES" class="nav-link">Habilidades</a></li>
+                <li class="nav-item"><a href="#EDUCACION" class="nav-link">Educacion</a></li>
          </ul>             
     </header>    
         <section id= 'HOME' class="row justify-content-center pt-5 mb-5">
@@ -33,7 +33,7 @@
                </ul>
             </div>             
          </section>
-        <section id="ACERCA" class="row align-items-center">
+        <section id="ACERCA" class="row align-items-center pt-3 pb-3">
              <div class="col-6">
              <h2>Sobre mi</h2>
              <p>Me considero una persona responsable, creativa, con iniciativa y puntualidad.</p>
@@ -73,7 +73,7 @@
                 </div>
              </div>             
         </section>
-        <section id="EDUCACION" class="row justify-content-center "> 
+        <section id="EDUCACION" class="row justify-content-center pt-5  pb-5"> 
             <div class="col-12 align-items-center">                
                 <h2>Educacion</h2>
                 <ul  class="nav nav-pills  gap-3" >
@@ -86,7 +86,7 @@
                 </ul>
             </div>
         </section>    
-    <footer class="row justify-content-evenly align-items-center pb-3 pt-3">
+    <footer class="row justify-content-evenly align-items-center pb-3 pt-5">
         <div class="col-12 col-md-6">
             <ul class="nav nav-pills gap-3">
                 <li class="nav-item" ><a href="https://www.linkedin.com/in/rodrigo-n-tolosa/" target="_blank" class="fab fa-linkedin-in fa-2x text-decoration-none" style="color: #0082ca;"></a></li>
