Se agregan cambios de apariencia

--- a/index.html
+++ b/index.html
@@ -9,70 +9,66 @@
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/9817cf6728.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="img/code-solid.ico">
-    <title>Lic. Tolosa Rodrigo -Porfolio-</title>
+    <title>Lic. Tolosa Rodrigo { Porfolio }</title>
 </head>
 <body>
-    <div class="container">
-    <header class="d-flex justify-content-end pt-4 pb-5">      
-         <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#HOME" class="nav-link ">Inicio</a></li>
-                <li class="nav-item"><a href="#ACERCA" class="nav-link">Sobre mi</a></li>
-                <li class="nav-item"><a href="#HABILIDADES" class="nav-link">Habilidades</a></li>
-                <li class="nav-item"><a href="#EDUCACION" class="nav-link">Educacion</a></li>
+    <div id ='HOME' class="container">        
+    <header class="d-flex justify-content-end pt-4 pb-5 mb-5">     
+         <ul class="nav navbar-brand position-fixed pt-4 pb-5 mb-5">
+                <li class="nav-item"><a href="#HOME" class="nav-link h5 text-body nava">Inicio</a></li>                
+                <li class="nav-item"><a href="#HABILIDADES" class="nav-link h5 text-body nava">Habilidades</a></li>
+                <li class="nav-item"><a href="#EXP" class="nav-link h5 text-body nava">Experiencia</a></li>
+                <li class="nav-item"><a href="#EDUCACION" class="nav-link h5 text-body nava">Educación</a></li>
          </ul>             
-    </header>    
-        <section id= 'HOME' class="row justify-content-center pt-5 mb-5">
+    </header>         
+    <section class="row justify-content-center pt-5 mb-5 mt-5 ">
             <div class="col-8 align-content-center" >
-                <h4 >Hola 👋! Soy </h4>  
-                <h1><span >Tolosa Rodrigo</span></h1>        
-                <h4>Desarrollador de Software</h4>
+                <h4 class="display-6" >Hola 👋! Soy </h4>  
+                <h1 class="display-1 text-primary"> <strong>Tolosa Rodrigo</strong></h1>        
+                <h4 class="display-6 "> <strong>Desarrollador de Software</strong> </h4>
                 <ul class="nav nav-pills gap-3">
-                    <li class="nav-item "><a href="https://www.linkedin.com/in/rodrigo-n-tolosa/" target="_blank" class="fab fa-linkedin-in fa-2x text-decoration-none" style="color: #0082ca;"></a></li>
-                    <li class="nav-item "><a href="https://github.com/tolosarodrigo00" target="_blank" class="fab fa-github fa-2x text-decoration-none" style="color: #333333;"></a></li>                       
-                    <li class="nav-item "><a href="" target="_blank" class="fa-regular fa-file-pdf fa-2x text-decoration-none" style="color: #333333;"></a></li>                       
+                    <li class="nav-item "><a href="https://www.linkedin.com/in/rodrigo-n-tolosa/" target="_blank" class="fab fa-linkedin-in fa-3x text-decoration-none text-secondary nava"></a></li>
+                    <li class="nav-item "><a href="https://github.com/tolosarodrigo00" target="_blank" class="fab fa-github fa-3x text-decoration-none text-secondary nava"></a></li>                                                              
+                    <li class="nav-item "><a href="" target="_blank" class="fa-regular fa-file-pdf fa-3x text-decoration-none text-secondary nava "></a></li>                       
                </ul>
             </div>             
-         </section>
-        <section id="ACERCA" class="row align-items-center pt-3 pb-3">
-             <div class="col-6">
-             <h2>Sobre mi</h2>
-             <p>Me considero una persona responsable, creativa, con iniciativa y puntualidad.</p>
-             <p>Asumo con agrado los retos y metas que su organización me pudiera plantear.</p>
-             <p>Interés por la actualización profesional, facilidad para trabajar en equipo, en condiciones de alta presión, así como para resolver problemas eficientemente y lograr las metas trazadas por la empresa y mi grupo de trabajo.</p>                          
-            </div>
-        </section>
+         </section>        
         <section id="HABILIDADES" class="row align-items-center pt-5 pb-5"> 
-             <div class="col text-center ">
-                <h2>Habilidades</h2>
+             <div class="col text-center ">                
                 <div class="row justify-content-evenly pt-5 pb-5 gap-3">
                     <div class="col-12 col-md-4 col-lg-2">
-                        <a class="fa-brands fa-html5 fa-5x text-decoration-none" style="color: #333333;"></a>
+                        <a class="fa-brands fa-html5 fa-5x text-decoration-none text-primary" style="color: #333333;"></a>
                     </div>
                     <div class="col-12 col-md-4 col-lg-2">
-                        <a  class="fa-brands fa-css3-alt fa-5x text-decoration-none" style="color: #333333;"></a>
+                        <a  class="fa-brands fa-css3-alt fa-5x text-decoration-none text-primary" style="color: #333333;"></a>
                     </div>
                     <div class="col-12 col-md-4 col-lg-2">
-                        <a  class="fa-brands fa-bootstrap  fa-5x text-decoration-none" style="color: #333333;"></a>
+                        <a  class="fa-brands fa-bootstrap  fa-5x text-decoration-none text-primary" style="color: #333333;"></a>
                     </div>
                     <div class="col-12 col-md-4 col-lg-2">
-                        <a  class="fa-brands fa-aws  fa-5x text-decoration-none" style="color: #333333;"></a>
+                        <a  class="fa-brands fa-aws  fa-5x text-decoration-none text-primary" style="color: #333333;"></a>
                     </div>
                     <div class="col-12 col-md-4 col-lg-2">
-                        <a  class="fa-brands fa-java  fa-5x text-decoration-none" style="color: #333333;"></a>
+                        <a  class="fa-brands fa-java  fa-5x text-decoration-none text-primary" style="color: #333333;"></a>
                     </div>
                     <div class="col-12 col-md-4 col-lg-2">
-                        <a  class="fa-brands fa-python fa-5x text-decoration-none" style="color: #333333;"></a>
+                        <a  class="fa-brands fa-python fa-5x text-decoration-none text-primary" style="color: #333333;"></a>
                     </div>
                     <div class="col-12 col-md-4 col-lg-2">
-                        <a  class="fab fa-github fa-2x fa-5x text-decoration-none" style="color: #333333;"></a>
+                        <a  class="fab fa-github fa-2x fa-5x text-decoration-none text-primary" style="color: #333333;"></a>
                     </div>
                     <div class="col-12 col-md-4 col-lg-2">
-                        <a  class="fa-brands fa-git-alt fa-5x text-decoration-none" style="color: #333333;"></a>
+                        <a  class="fa-brands fa-git-alt fa-5x text-decoration-none text-primary" style="color: #333333;"></a>
                     </div>   
                     
                 </div>
              </div>             
         </section>
+        <section id="EXP" class="row align-items-center pt-3 pb-3">
+            <div class="col-12">
+                <h2>Experiencia</h2>
+            </div>
+       </section>
         <section id="EDUCACION" class="row justify-content-center pt-5  pb-5"> 
             <div class="col-12 align-items-center">                
                 <h2>Educacion</h2>
@@ -85,12 +81,12 @@
 
                 </ul>
             </div>
-        </section>    
+        </section>        
     <footer class="row justify-content-evenly align-items-center pb-3 pt-5">
         <div class="col-12 col-md-6">
             <ul class="nav nav-pills gap-3">
-                <li class="nav-item" ><a href="https://www.linkedin.com/in/rodrigo-n-tolosa/" target="_blank" class="fab fa-linkedin-in fa-2x text-decoration-none" style="color: #0082ca;"></a></li>
-                <li class="nav-item"><a href="https://github.com/tolosarodrigo00" target="_blank" class="fab fa-github fa-2x text-decoration-none" style="color: #333333;"></a></li>                  
+                <li class="nav-item" ><a href="https://www.linkedin.com/in/rodrigo-n-tolosa/" target="_blank" class="fab fa-linkedin-in fa-2x text-decoration-none text-secondary nava" style="color: #0082ca;"></a></li>
+                <li class="nav-item"><a href="https://github.com/tolosarodrigo00" target="_blank" class="fab fa-github fa-2x text-decoration-none text-secondary nava" style="color: #333333;"></a></li>                  
          </ul> 
         </div>
         <div class="col-12 col-md-6">
