Se agrega experiencia

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <title>Lic. Tolosa Rodrigo { Porfolio }</title>
 </head>
 <body>
-    <div id ='HOME' class="container">        
+    <div id ='HOME' class="container">   
+         <!-- position-fixed -->     
     <header class="d-flex justify-content-end pt-4 pb-5 mb-5">     
-         <ul class="nav navbar-brand position-fixed pt-4 pb-5 mb-5">
+         <ul class="nav navbar-brand  pt-4 ">
                 <li class="nav-item"><a href="#HOME" class="nav-link h5 text-body nava">Inicio</a></li>                
                 <li class="nav-item"><a href="#HABILIDADES" class="nav-link h5 text-body nava">Habilidades</a></li>
                 <li class="nav-item"><a href="#EXP" class="nav-link h5 text-body nava">Experiencia</a></li>
@@ -33,7 +34,7 @@
                </ul>
             </div>             
          </section>        
-        <section id="HABILIDADES" class="row align-items-center pt-5 pb-5"> 
+        <section id="HABILIDADES" class="row align-items-center pt-5 pb-3"> 
              <div class="col text-center ">                
                 <div class="row justify-content-evenly pt-5 pb-5 gap-3">
                     <div class="col-12 col-md-4 col-lg-2">
@@ -64,9 +65,48 @@
                 </div>
              </div>             
         </section>
-        <section id="EXP" class="row align-items-center pt-3 pb-3">
-            <div class="col-12">
-                <h2>Experiencia</h2>
+        <section id="EXP" class="row align-items-center pt-1 pb-3">
+            <div class="col-12 text-center">
+                <div class="row justify-content-evenly pt-5 pb-5 gap-2 ">
+                    <div class="col-12 text-center pt-1 pb-5 mb-5 ">
+                        <h2 class="display-2">Experiencia</h2>
+                    </div>
+                    <div class="col-12 col-md-4 card border-0 pb-5">                        
+                            <img src="./img/descarga.png" class="card-img-top w-100 " alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">DXC Technology</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Senior Software Developer</h6>
+                              <ul class="list-group list-group-flush">                                
+                                <li class="list-group-item">Programacion PL-SQL</li>
+                                <li class="list-group-item">Optimización</li>                                
+                                <li class="list-group-item">Análisis de requerimientos</li>                                
+                                <li class="list-group-item">Base de datos Oracle</li>                            
+                                <li class="list-group-item">AWS</li>                            
+                              </ul>
+                            </div>                          
+                    </div>
+                    <div class="col-12 col-md-4 card border-0 pb-5">                            
+                        <img src="./img/hms.jpeg" class="card-img-top w-100" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Health Management Solutions</h5>
+                          <h6 class="card-subtitle mb-2 text-muted">Senior Oracle Developer</h6>
+                          <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Desarrollo en Oracle Forms</li>
+                            <li class="list-group-item">Programacion PL-SQL</li>
+                            <li class="list-group-item">Optimización</li>                         
+                            <li class="list-group-item">Base de datos Oracle</li>                            
+                          </ul>
+                        </div>                          
+                </div>
+                <div class="col-12 col-md-4 card  border-0 pb-5">                            
+                    <img src="./img/uni.png" class="card-img-top w-100" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Univerdad Nacional de la Patagonia San Juan Bosco</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Profesor Talleres UPAMI</h6>
+                      <p class="card-text">Dictado de los cursos de nivel inicial y avanzado de UPAMI .</p>
+                    </div>                          
+            </div>
+                </div>                               
             </div>
        </section>
         <section id="EDUCACION" class="row justify-content-center pt-5  pb-5"> 
