--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                             <img src="./img/descarga.png" class="card-img-top w-100 " alt="...">
                             <div class="card-body">
                               <h5 class="card-title">DXC Technology</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">(2014 - Actual)</h6>
                               <h6 class="card-subtitle mb-2 text-muted">Senior Software Developer</h6>
                               <ul class="list-group list-group-flush">                                
                                 <li class="list-group-item">Programacion PL-SQL</li>
@@ -89,6 +90,7 @@
                         <img src="./img/hms.jpeg" class="card-img-top w-100" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Health Management Solutions</h5>
+                          <h6 class="card-subtitle mb-2 text-muted">(2014 - 2022)</h6>
                           <h6 class="card-subtitle mb-2 text-muted">Senior Oracle Developer</h6>
                           <ul class="list-group list-group-flush">
                             <li class="list-group-item">Desarrollo en Oracle Forms</li>
