Se modifica el footer

--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
                 </ul>
             </div>
         </section>        
-    <footer class="row justify-content-evenly align-items-center pb-3 pt-5">
-        <div class="col-12 col-md-6">
-            <ul class="nav nav-pills gap-3">
+    <footer class="row  align-items-center pb-3 pt-5">
+        <div class="col-12 col-md-6 ">
+            <ul class="nav nav-pills gap-3 justify-content-center">
                 <li class="nav-item" ><a href="https://www.linkedin.com/in/rodrigo-n-tolosa/" target="_blank" class="fab fa-linkedin-in fa-2x text-decoration-none text-secondary nava" style="color: #0082ca;"></a></li>
                 <li class="nav-item"><a href="https://github.com/tolosarodrigo00" target="_blank" class="fab fa-github fa-2x text-decoration-none text-secondary nava" style="color: #333333;"></a></li>                  
          </ul> 
         </div>
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6 text-center" >
             <h6> &copy; 2023 Todos los derechos reservados. Lic. Tolosa Rodrigo </h6>
         </div>
         
