Se agrega curso y educacion

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
          <!-- position-fixed -->     
     <header class="d-flex justify-content-end pt-4 pb-5 mb-5">     
          <ul class="nav navbar-brand  pt-4 ">
-                <li class="nav-item"><a href="#HOME" class="nav-link h5 text-body nava">Inicio</a></li>                
-                <li class="nav-item"><a href="#HABILIDADES" class="nav-link h5 text-body nava">Habilidades</a></li>
+                <li class="nav-item"><a href="#HOME" class="nav-link h5 text-body nava">Inicio</a></li>                                
                 <li class="nav-item"><a href="#EXP" class="nav-link h5 text-body nava">Experiencia</a></li>
                 <li class="nav-item"><a href="#EDUCACION" class="nav-link h5 text-body nava">Educación</a></li>
          </ul>             
@@ -113,17 +112,167 @@
        </section>
         <section id="EDUCACION" class="row justify-content-center pt-5  pb-5"> 
             <div class="col-12 align-items-center">                
-                <h2>Educacion</h2>
-                <ul  class="nav nav-pills  gap-3" >
-                    <li class="nav-item" > HTML</li>
-                    <li class="nav-item" >CSS </li>
-                    <li class="nav-item" > BOSSTRAP</li>
-                    <li class="nav-item" > ASDASD</li>
-
-
-                </ul>
+                <div class="row justify-content-evenly pt-5 pb-5 gap-2 ">
+                    <div class="col-12 text-center pb-5 mb-5">
+                        <h2 class=" display-2 text-center">Educación</h2>
+                    </div>
+                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4 text-center">
+                            <img src="./img/uni.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-center">
+                              <h5 class="card-title">Licenciatura en Informatica</h5>
+                              <p class="card-text">2010-2017</p>
+                              <p class="card-text"><small class="text-muted">Puerto Madryn, Chubut</small></p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4 text-center">
+                            <img src="./img/uni.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-center">
+                              <h5 class="card-title">Analista Programador Universitario</h5>
+                              <p class="card-text">2010-2015</p>
+                              <p class="card-text"><small class="text-muted">Puerto Madryn, Chubut</small></p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>                    
+                </div>            
             </div>
         </section>        
+        <section id="CURSO" class="row justify-content-center pt-5  pb-5"> 
+            <div class="col-12 align-items-center">                
+                <div class="row justify-content-evenly pt-5 pb-5 gap-2 ">
+                    <div class="col-12 text-center pb-5 mb-5">
+                        <h2 class=" display-2 text-center">Cursos y Certificaciones</h2>
+                    </div>
+                    <div class="card mb-3 border-0" style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4 text-center">
+                            <img src="./img/UNS.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-center">
+                              <h5 class="card-title">Curso de “Sistemas de Información como Herramienta de Negocio. Caso de Estudio: SAP”</h5>
+                              <p class="card-text">Universidad Nacional del Sur</p>                              
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4 text-center">
+                            <img src="./img/aws_logo.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-center">
+                              <h5 class="card-title">AWS Partner: Accreditation (Business)</h5>
+                              <p class="card-text">2022</p>                              
+                            </div>
+                          </div>
+                        </div>
+                    </div>  
+                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4 text-center">
+                            <img src="./img/aws_logo.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-center">
+                              <h5 class="card-title">AWS Partner: Accreditation (Technical)</h5>
+                              <p class="card-text">2022</p>                              
+                            </div>
+                          </div>
+                        </div>
+                    </div>    
+                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4 text-center">
+                            <img src="./img/aws_logo.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-center">
+                              <h5 class="card-title">AWS Partner: Cloud Economics Accreditation</h5>
+                              <p class="card-text">2022</p>                              
+                            </div>
+                          </div>
+                        </div>
+                    </div>    
+                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4 text-center">
+                            <img src="./img/aws_logo.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-center">
+                              <h5 class="card-title">AWS Partner: Sales Accreditation (Business)</h5>
+                              <p class="card-text">2022</p>                              
+                            </div>
+                          </div>
+                        </div>
+                    </div>  
+                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4 text-center">
+                            <img src="./img/proidesa.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-center">
+                              <h5 class="card-title">CCNA 3 (Cisco Certified Network Associate)</h5>
+                              <p class="card-text">2018</p>                              
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4 text-center">
+                            <img src="./img/proidesa.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-center">
+                              <h5 class="card-title">CCNA 2 (Cisco Certified Network Associate)</h5>
+                              <p class="card-text">2018</p>                              
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4 text-center">
+                            <img src="./img/proidesa.png" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-center">
+                              <h5 class="card-title">CCNA 1 (Cisco Certified Network Associate)</h5>
+                              <p class="card-text">2018</p>                              
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3  border-0 " style="max-width: 540px;">
+                        <div class="row g-0">
+                          <div class="col-md-4 text-center">
+                            <img src="./img/utn.jpg" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body text-center">
+                              <h5 class="card-title">Introducción a ISO 9001:2015</h5>
+                              <p class="card-text">2018</p>                              
+                            </div>
+                          </div>
+                        </div>
+                    </div>                                 
+                </div>            
+            </div>
+        </section>      
     <footer class="row  align-items-center pb-3 pt-5">
         <div class="col-12 col-md-6 ">
             <ul class="nav nav-pills gap-3 justify-content-center">
